...
        android:id="@+id/coinRankingFragment"
        android:name="com.example.mysimplecoindeck.ui.fragments.CoinsRankingFragment"
        android:label="CoinRankingFragment">

        <action
            android:id="@+id/action_CoinRankingFragment_to_SingleCoinFragment"
            app:destination="@id/singleCoinFragment" />
        <action
            android:id="@+id/action_CoinRankingFragment_to_SearchCoinFragment"
            app:destination="@id/searchCoinFragment" />
        <action
            android:id="@+id/action_CoinRankingFragment_to_PortfolioFragment"
            app:destination="@id/portfolioFragment" />
...
